# DemiCat

./: .gitignore  CHANGELOG.md  CNAME  DemiCat.json  DemiCatPlugin.json  Directory.Build.props  Directory.Build.props.example  MIGRATIONS.md  README.md  SQL Schema.sql  global.json  pytest.ini  repo.json
demibot/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
demibot/demibot/: README.md  __init__.py  asset_cleanup.py  bridge.py  channel_names.py  config.json  config.py  log_config.py  logging.py  main.py  pyproject.toml  repeat_events.py  syncshell_cleanup.py
demibot/demibot/data/: unicode_emojis.json
demibot/demibot/db/: __init__.py  models.py  session.py
demibot/demibot/db/migrations/: env.py
demibot/demibot/discordbot/: __init__.py  bot.py  presence_store.py  utils.py
demibot/demibot/discordbot/cogs/: admin.py  admin_new.py  events.py  keygen.py  mirror.py  presence.py  requests.py  setup_wizard.py  vault.py
demibot/demibot/http/: __init__.py  api.py  chat_events.py  deps.py  discord_allowed_mentions.py  discord_client.py  discord_helpers.py  event_images.py  schemas.py  upload_validation.py  validation.py  vault.py  ws.py  ws_chat.py  ws_common.py  ws_syncshell.py
demibot/demibot/http/routes/: __init__.py  _messages_common.py  _stores.py  _user_display.py  assets.py  bundles.py  channels.py  delta_token.py  discord_emojis.py  embeds.py  emojis.py  (+18 more)
demibot/demibot/modules/: __init__.py
demibot/docs/: multiple_officer_roles.md
demibot/models/: event.py
demibot/scripts/: first_run_wizard.py  refresh_channels.py
(+470 files in other folders)
