[project]
name = "demibot"
version = "0.1.0"
description = "Discord bot and FastAPI backend for DemiCat plugin"
requires-python = ">=3.11"
authors = [{name = "DemiCat"}]
readme = "README.md"
license = {text = "MIT"}

[project.dependencies]
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.0", extras=["standard"]}
discord.py = "^2.3.2"
sqlalchemy = {version = "^2.0.25", extras=["asyncio"]}
aiomysql = "^0.2.0"
aiosqlite = "^0.19.0"
alembic = "^1.12.0"
pydantic = "^2.5.0"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
uvloop = {version = "^0.19.0", optional = true}

[project.optional-dependencies]
uvloop = ["uvloop"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
[tool.black]
line-length = 88

